--- a/bptworldApps.json
+++ b/bptworldApps.json
@@ -257,7 +257,7 @@
   "HubWatchdogChild3RawCode": "",
   "HubWatchdogChild4RawCode": "",
   "HubWatchdogDiscussion": "https://community.hubitat.com/t/release-hub-watchdog-simple-way-to-monitor-if-your-hub-is-slowing-down-or-not/23371",
-  "HubWatchdogUpdateNote": "V1.0.2 - 12/04/19 - Chasing a gremlin",
+  "HubWatchdogUpdateNote": "V1.0.7 - 09/26/19 - Added a 'push all' option",
   
   "Life360TrackerParentVersion": "v2.0.0",
   "Life360TrackerChild1Version": "v2.0.5",
