--- a/bptworldApps.json
+++ b/bptworldApps.json
@@ -123,7 +123,7 @@
   "ChromecastHelperDiscussion": "https://community.hubitat.com/t/release-chromecast-helper-simple-way-to-help-keep-your-google-nest-devices-alive/19237",
   "ChromecastHelperUpdateNote": "V2.0.0 - 08/18/19 - App Watchdog 2 compatible",
   
-  "DeviceCheckPlusParentVersion": "v1.0.0",
+  "DeviceCheckPlusParentVersion": "v1.0.1",
   "DeviceCheckPlusChild1Version": "v1.0.6",
   "DeviceCheckPlusChild1Name": "",
   "DeviceCheckPlusChild2Version": "",
@@ -138,7 +138,7 @@
   "DeviceCheckPlusChild3RawCode": "",
   "DeviceCheckPlusChild4RawCode": "",
   "DeviceCheckPlusDiscussion": "https://community.hubitat.com/t/release-device-check-plus-check-selected-devices-then-warn-you-whats-not-in-the-right-state/24454",
-  "DeviceCheckPlusUpdateNote": "V1.0.6 - 01/27/20 - Found typo, added flash lights to actions",
+  "DeviceCheckPlusUpdateNote": "V1.0.1 - 10/16/19 - Cosmetic changes",
   
   "DeviceSequencerParentVersion": "v2.0.0",
   "DeviceSequencerChild1Version": "v2.0.0",
