--- a/bptworldApps.json
+++ b/bptworldApps.json
@@ -242,10 +242,10 @@
   "HomeTrackerDiscussion": "https://community.hubitat.com/t/release-home-tracker-track-the-coming-and-going-of-house-members-with-announcements-and-push-messages/22709",
   "HomeTrackerUpdateNote": "V2.3.1 - 02/27/20 - Changes to flash when message is delayed",
   
-  "HubWatchdogParentVersion": "V1.0.1",
-  "HubWatchdogChild1Version": "V1.0.7",
+  "HubWatchdogParentVersion": "v1.0.1",
+  "HubWatchdogChild1Version": "v1.0.7",
   "HubWatchdogChild1Name": "",
-  "HubWatchdogChild2Version": "V1.0.2",
+  "HubWatchdogChild2Version": "v1.0.2",
   "HubWatchdogChild2Name": "Examiner",
   "HubWatchdogChild3Version": "",
   "HubWatchdogChild3Name": "",
