--- a/bptworldApps.json
+++ b/bptworldApps.json
@@ -124,7 +124,7 @@
   "ChromecastHelperUpdateNote": "V2.0.0 - 08/18/19 - App Watchdog 2 compatible",
   
   "DeviceCheckPlusParentVersion": "v1.0.1",
-  "DeviceCheckPlusChild1Version": "v1.0.6",
+  "DeviceCheckPlusChild1Version": "v1.0.7",
   "DeviceCheckPlusChild1Name": "",
   "DeviceCheckPlusChild2Version": "",
   "DeviceCheckPlusChild2Name": "",
@@ -138,7 +138,7 @@
   "DeviceCheckPlusChild3RawCode": "",
   "DeviceCheckPlusChild4RawCode": "",
   "DeviceCheckPlusDiscussion": "https://community.hubitat.com/t/release-device-check-plus-check-selected-devices-then-warn-you-whats-not-in-the-right-state/24454",
-  "DeviceCheckPlusUpdateNote": "V1.0.1 - 10/16/19 - Cosmetic changes",
+  "DeviceCheckPlusUpdateNote": "V1.0.7 - 01/31/20 - Add ability for DCP to try and fix devices in the wrong state. Now automaticaly creates device for On Demand Option.",
   
   "DeviceSequencerParentVersion": "v2.0.0",
   "DeviceSequencerChild1Version": "v2.0.0",
