--- a/bptworldApps.json
+++ b/bptworldApps.json
@@ -124,7 +124,7 @@
   "ChromecastHelperUpdateNote": "V2.0.0 - 08/18/19 - App Watchdog 2 compatible",
   
   "DeviceCheckPlusParentVersion": "v1.0.1",
-  "DeviceCheckPlusChild1Version": "v1.0.8",
+  "DeviceCheckPlusChild1Version": "v1.0.9",
   "DeviceCheckPlusChild1Name": "",
   "DeviceCheckPlusChild2Version": "",
   "DeviceCheckPlusChild2Name": "",
@@ -138,7 +138,7 @@
   "DeviceCheckPlusChild3RawCode": "",
   "DeviceCheckPlusChild4RawCode": "",
   "DeviceCheckPlusDiscussion": "https://community.hubitat.com/t/release-device-check-plus-check-selected-devices-then-warn-you-whats-not-in-the-right-state/24454",
-  "DeviceCheckPlusUpdateNote": "V1.0.8 - 04/01/20 - Added a 'No devices found' message",
+  "DeviceCheckPlusUpdateNote": "V1.0.9 - 04/04/20 - Fixed a typo",
  
   "DeviceSequencerParentVersion": "v2.0.0",
   "DeviceSequencerChild1Version": "v2.0.0",
