--- a/Apps/Weather Dot Gov/packageManifest.json
+++ b/Apps/Weather Dot Gov/packageManifest.json
@@ -13,6 +13,14 @@
 			"required": true,
 			"oauth": false,
 			"version": "1.0.0"
+		},
+		{
+			"id" : "bf7d70fb-0000-0000-9cfc-fb8520cda22a",
+			"name": "Weather Dot Gov Child",
+			"location": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Weather%20Dot%20Gov/WDG-child.groovy",
+			"required": true,
+			"oauth": false,
+			"version": "1.0.0"
 		}
 	],
 	"drivers" : [
@@ -20,6 +28,13 @@
 			"id": "163f6821-0000-48fc-8e66-cd787cfe54eb",
 			"name": "Weather Dot Gov Data Driver",
 			"location": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Weather%20Dot%20Gov/WDG-data-driver.groovy",
+			"required": true,
+			"version": "1.0.0"
+		},
+		{
+			"id": "163f6821-0000-0000-8e66-cd787cfe54eb",
+			"name": "Weather Dot Gov Tile Driver",
+			"location": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Weather%20Dot%20Gov/WDG-tile-driver.groovy",
 			"required": true,
 			"version": "1.0.0"
 		}
