--- a/Apps/Weather Dot Gov/packageManifest.json
+++ b/Apps/Weather Dot Gov/packageManifest.json
@@ -9,6 +9,7 @@
 		{
 			"id" : "5d3ba06b-e58d-403c-b3fb-17a239ed2f4c",
 			"name": "Weather Dot Gov Parent",
+			"namespace": "BPTWorld",
 			"location": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Weather%20Dot%20Gov/WDG-parent.groovy",
 			"required": true,
 			"oauth": false,
@@ -17,6 +18,7 @@
 		{
 			"id" : "aa24dff0-9a3e-41c6-a6c4-adf244ceece2",
 			"name": "Weather Dot Gov Child",
+			"namespace": "BPTWorld",
 			"location": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Weather%20Dot%20Gov/WDG-child.groovy",
 			"required": true,
 			"oauth": false,
@@ -27,6 +29,7 @@
 		{
 			"id": "7594675a-a13d-40b5-a134-516ac87a1aec",
 			"name": "Weather Dot Gov Data Driver",
+			"namespace": "BPTWorld",
 			"location": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Weather%20Dot%20Gov/WDG-data-driver.groovy",
 			"required": true,
 			"version": "1.0.0"
@@ -34,6 +37,7 @@
 		{
 			"id": "cdba29b5-e871-44a0-87c2-9aad1f340763",
 			"name": "Weather Dot Gov Tile Driver",
+			"namespace": "BPTWorld",
 			"location": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Weather%20Dot%20Gov/WDG-tile-driver.groovy",
 			"required": true,
 			"version": "1.0.0"
