--- a/Apps/Fully Kiosk Director/packageManifest.json
+++ b/Apps/Fully Kiosk Director/packageManifest.json
@@ -17,7 +17,7 @@
 		},
 		{
 			"id" : "5c2eb4cf-1728-4c60-b7c1-aebd6458fdee",
-			"name": "Fully Kiosk Director",
+			"name": "Fully Kiosk Director Child",
 			"namespace": "Follow Me",
 			"location": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Fully%20Kiosk%20Director/FKC-child.groovy",
 			"required": true,
