--- a/Apps/Life360 Tracker/packageManifest.json
+++ b/Apps/Life360 Tracker/packageManifest.json
@@ -8,7 +8,7 @@
 	"apps" : [
 		{
 			"id" : "334451a9-c841-4c90-b2c6-7c8af2e6d477",
-			"name": "Life360 Tracker Parent",
+			"name": "Life360 Tracker",
 			"namespace": "BPTWorld",
 			"location": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Life360%20Tracker/LT-parent.groovy",
 			"required": true,
