--- a/Apps/Magic Cube/packageManifest.json
+++ b/Apps/Magic Cube/packageManifest.json
@@ -8,7 +8,7 @@
 	"apps" : [
 		{
 			"id" : "3fe7903d-280e-46f4-8720-2f621c59093e",
-			"name": "Magic Cube Parent",
+			"name": "Magic Cube",
 			"namespace": "BPTWorld",
 			"location": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Magic%20Cube/MC-parent.groovy",
 			"required": true,
