--- a/Apps/BI Control/packageManifest.json
+++ b/Apps/BI Control/packageManifest.json
@@ -3,6 +3,8 @@
 	"minimumHEVersion": "2.1.9",
 	"author": "BPTWorld",
 	"dateReleased": "2020-04-07",
+	"documentationLink": "https://github.com/bptworld/Hubitat",
+	"communityLink": "https://community.hubitat.com/t/release-bi-control-local-blue-iris-control/5454",
 	"apps" : [
 		{
 			"id" : "4a0a86a3-c305-4066-b568-162cfe545a12",
