--- a/Apps/The Flasher/packageManifest.json
+++ b/Apps/The Flasher/packageManifest.json
@@ -20,7 +20,7 @@
 			"location": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/The%20Flasher/TF-child.groovy",
 			"required": true,
 			"oauth": false,
-			"version": "1.0.6"
+			"version": "1.0.7
 		}
 	],
 	"drivers" : [	
