--- a/Apps/CATT Director/packageManifest.json
+++ b/Apps/CATT Director/packageManifest.json
@@ -3,6 +3,8 @@
 	"minimumHEVersion": "2.1.9",
 	"author": "BPTWorld",
 	"dateReleased": "2020-04-07",
+	"documentationLink": "https://github.com/bptworld/Hubitat",
+	"communityLink": "https://community.hubitat.com/t/release-catt-director-app-and-driver/20894",
 	"apps" : [
 		{
 			"id" : "801d2cca-7c7f-470a-a438-fd3c16768018",
