--- a/Apps/Device Check Plus/packageManifest.json
+++ b/Apps/Device Check Plus/packageManifest.json
@@ -3,6 +3,8 @@
 	"minimumHEVersion": "2.1.9",
 	"author": "BPTWorld",
 	"dateReleased": "2020-04-07",
+	"documentationLink": "https://github.com/bptworld/Hubitat",
+	"communityLink": "https://community.hubitat.com/t/release-device-check-plus-check-selected-devices-then-warn-you-whats-not-in-the-right-state/24454",
 	"apps" : [
 		{
 			"id" : "21d1e256-35ff-46be-8417-8ed6a8757281",
