--- a/Apps/Follow Me/packageManifest.json
+++ b/Apps/Follow Me/packageManifest.json
@@ -3,6 +3,8 @@
 	"minimumHEVersion": "2.1.9",
 	"author": "BPTWorld",
 	"dateReleased": "2020-04-07",
+	"documentationLink": "https://github.com/bptworld/Hubitat",
+	"communityLink": "https://community.hubitat.com/t/release-follow-me/12139",
 	"apps" : [
 		{
 			"id" : "e32eb83d-a6e0-402e-9199-360507a75810",
