--- a/Apps/Home Tracker/packageManifest.json
+++ b/Apps/Home Tracker/packageManifest.json
@@ -3,6 +3,8 @@
 	"minimumHEVersion": "2.1.9",
 	"author": "BPTWorld",
 	"dateReleased": "2020-04-07",
+	"documentationLink": "https://github.com/bptworld/Hubitat",
+	"communityLink": "https://community.hubitat.com/t/release-home-tracker-track-the-coming-and-going-of-house-members-with-announcements-and-push-messages/22709",
 	"apps" : [
 		{
 			"id" : "0f7e671f-27e6-4644-a131-b6b9694562be",
