--- a/Apps/Hub Watchdog/packageManifest.json
+++ b/Apps/Hub Watchdog/packageManifest.json
@@ -3,6 +3,8 @@
 	"minimumHEVersion": "2.1.9",
 	"author": "BPTWorld",
 	"dateReleased": "2020-04-07",
+	"documentationLink": "https://github.com/bptworld/Hubitat",
+	"communityLink": "https://community.hubitat.com/t/release-hub-watchdog-simple-way-to-monitor-if-your-hub-is-slowing-down-or-not/23371",
 	"apps" : [
 		{
 			"id" : "31e209fc-8b8c-4cc0-ac62-68127ac2ecb8",
