--- a/Apps/Remote Wellness Check/packageManifest.json
+++ b/Apps/Remote Wellness Check/packageManifest.json
@@ -3,6 +3,8 @@
 	"minimumHEVersion": "2.1.9",
 	"author": "BPTWorld",
 	"dateReleased": "2020-04-07",
+	"documentationLink": "https://github.com/bptworld/Hubitat",
+	"communityLink": "https://github.com/bptworld/Hubitat/blob/master",
 	"apps" : [
 		{
 			"id" : "066f5317-ca1d-46c0-b1bb-7199395c2935",
