--- a/Apps/Send IP2IR/packageManifest.json
+++ b/Apps/Send IP2IR/packageManifest.json
@@ -3,6 +3,8 @@
 	"minimumHEVersion": "2.1.9",
 	"author": "BPTWorld",
 	"dateReleased": "2020-04-07",
+	"documentationLink": "https://github.com/bptworld/Hubitat",
+	"communityLink": "https://community.hubitat.com/t/release-send-ip2ir-control-all-of-your-ir-devices-from-your-dashboard/4667",
 	"apps" : [
 		{
 			"id" : "a230faf3-34dd-40f9-b72b-b9d7bb2bdf8d",
