--- a/Apps/Simple Dates/packageManifest.json
+++ b/Apps/Simple Dates/packageManifest.json
@@ -3,6 +3,8 @@
 	"minimumHEVersion": "2.1.9",
 	"author": "BPTWorld",
 	"dateReleased": "2020-04-07",
+	"documentationLink": "https://github.com/bptworld/Hubitat",
+	"communityLink": "https://community.hubitat.com/t/release-simple-dates-create-countdowns-of-your-special-dates/21859",
 	"apps" : [
 		{
 			"id" : "b63130f0-bd38-4c2c-99de-5cffff85a253",
