--- a/Apps/Simple Kitchen Timer/packageManifest.json
+++ b/Apps/Simple Kitchen Timer/packageManifest.json
@@ -3,6 +3,8 @@
 	"minimumHEVersion": "2.1.9",
 	"author": "BPTWorld",
 	"dateReleased": "2020-04-07",
+	"documentationLink": "https://github.com/bptworld/Hubitat",
+	"communityLink": "https://community.hubitat.com/t/release-simple-kitchen-timer-with-controls-for-use-with-dashboards/37021",
 	"apps" : [
 		{
 			"id" : "c5b511d7-c4fd-4aa0-98b3-c7bb86838857",
