--- a/Apps/Tile Master/packageManifest.json
+++ b/Apps/Tile Master/packageManifest.json
@@ -3,6 +3,8 @@
 	"minimumHEVersion": "2.1.9",
 	"author": "BPTWorld",
 	"dateReleased": "2020-04-07",
+	"documentationLink": "https://github.com/bptworld/Hubitat",
+	"communityLink": "https://community.hubitat.com/t/release-tile-master-create-a-tile-with-multiple-devices-and-customization-options/23140",
 	"apps" : [
 		{
 			"id" : "a8c467f1-7742-4033-b802-df0228611aa5",
