--- a/Apps/Package Explorer/packageManifest.json
+++ b/Apps/Package Explorer/packageManifest.json
@@ -4,7 +4,7 @@
 	"author": "BPTWorld",
 	"dateReleased": "2020-04-07",
 	"documentationLink": "https://github.com/bptworld/Hubitat",
-	"communityLink": "",
+	"communityLink": "https://community.hubitat.com/t/release-package-explorer-for-use-with-hubitat-package-manager/39214",
 	"apps" : [
 		{
 			"id" : "744790a2-7055-4967-9fd9-8d51257a40c9",
