--- a/Apps/Simple Irrigation/packageManifest.json
+++ b/Apps/Simple Irrigation/packageManifest.json
@@ -1,5 +1,5 @@
 {
-	"packageName": "Simpe Irrigation",
+	"packageName": "Simple Irrigation",
 	"minimumHEVersion": "2.1.9",
 	"author": "BPTWorld",
 	"dateReleased": "2020-04-07",
@@ -8,7 +8,7 @@
 	"apps" : [
 		{
 			"id" : "7114c11b-e44a-4bec-9ecf-2c2ad87e32bf",
-			"name": "Simpe Irrigation",
+			"name": "Simple Irrigation",
 			"namespace": "BPTWorld",
 			"location": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Simple%20Irrigation/SI-parent.groovy",
 			"required": true,
@@ -17,7 +17,7 @@
 		},
 		{
 			"id" : "66dd229c-2128-4ac8-ad71-29053cd46c31",
-			"name": "Simpe Irrigation Child",
+			"name": "Simple Irrigation Child",
 			"namespace": "BPTWorld",
 			"location": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Simple%20Irrigation/SI-child.groovy",
 			"required": true,
