--- a/Apps/Snapshot/packageManifest.json
+++ b/Apps/Snapshot/packageManifest.json
@@ -1,5 +1,5 @@
 {
-	"packageName": "Home Tracker",
+	"packageName": "Snapshot",
 	"minimumHEVersion": "2.1.9",
 	"author": "BPTWorld",
 	"dateReleased": "2020-04-07",
