--- a/Apps/Snapshot/packageManifest.json
+++ b/Apps/Snapshot/packageManifest.json
@@ -37,7 +37,7 @@
 	"drivers" : [
 		{
 			"id": "d4226c26-3ce8-4e20-b8ce-cd9fa311e6e7",
-			"name": "Home Tracker Driver",
+			"name": "Snapshot Driver",
 			"namespace": "BPTWorld",
 			"location": "https://github.com/bptworld/Hubitat/blob/master/Apps/Snapshot/S-driver.groovy",
 			"required": true,
