--- a/Apps/Web Pinger/packageManifest.json
+++ b/Apps/Web Pinger/packageManifest.json
@@ -5,6 +5,7 @@
 	"dateReleased": "2020-04-07",
 	"documentationLink": "https://github.com/bptworld/Hubitat",
 	"communityLink": "https://community.hubitat.com/t/release-web-pinger/8347",
+	"releaseNotes": "All release notes can be found within the Community Link and within the App/Driver code.",
 	"apps" : [
 		{
 			"id" : "f0821784-444f-4118-bb5a-d047fdc4772e",
