--- a/Apps/The Flasher/packageManifest.json
+++ b/Apps/The Flasher/packageManifest.json
@@ -5,6 +5,7 @@
 	"dateReleased": "2020-04-07",
 	"documentationLink": "https://github.com/bptworld/Hubitat",
 	"communityLink": "https://community.hubitat.com/t/release-the-flasher-flash-your-lights-based-on-several-triggers/30843",
+	"releaseNotes": "All release notes can be found within the Community Link and within the App/Driver code.",
 	"apps" : [
 		{
 			"id" : "37bca8eb-0f08-4d20-924e-9686f57bd8e1",
