--- a/Apps/Simple Reminders/packageManifest.json
+++ b/Apps/Simple Reminders/packageManifest.json
@@ -5,6 +5,7 @@
 	"dateReleased": "2020-04-07",
 	"documentationLink": "https://github.com/bptworld/Hubitat",
 	"communityLink": "https://community.hubitat.com/t/release-simple-reminders-setup-reminders-through-out-the-day/28816",
+	"releaseNotes": "All release notes can be found within the Community Link and within the App/Driver code.",
 	"apps" : [
 		{
 			"id" : "f8d05799-375e-43aa-b047-8ae68f8c0415",
