--- a/Apps/Simple Irrigation/packageManifest.json
+++ b/Apps/Simple Irrigation/packageManifest.json
@@ -5,6 +5,7 @@
 	"dateReleased": "2020-04-07",
 	"documentationLink": "https://github.com/bptworld/Hubitat",
 	"communityLink": "https://community.hubitat.com/t/release-simple-irrigation/14420",
+	"releaseNotes": "All release notes can be found within the Community Link and within the App/Driver code.",
 	"apps" : [
 		{
 			"id" : "7114c11b-e44a-4bec-9ecf-2c2ad87e32bf",
