--- a/Apps/Simple Device Timer/packageManifest.json
+++ b/Apps/Simple Device Timer/packageManifest.json
@@ -5,6 +5,7 @@
 	"dateReleased": "2020-04-07",
 	"documentationLink": "https://github.com/bptworld/Hubitat",
 	"communityLink": "https://community.hubitat.com/t/release-simple-device-timer/16917",
+	"releaseNotes": "All release notes can be found within the Community Link and within the App/Driver code.",
 	"apps" : [
 		{
 			"id" : "1d18489a-f49a-4b21-a256-251267924c81",
