--- a/Apps/Simple Dates/packageManifest.json
+++ b/Apps/Simple Dates/packageManifest.json
@@ -5,6 +5,7 @@
 	"dateReleased": "2020-04-07",
 	"documentationLink": "https://github.com/bptworld/Hubitat",
 	"communityLink": "https://community.hubitat.com/t/release-simple-dates-create-countdowns-of-your-special-dates/21859",
+	"releaseNotes": "All release notes can be found within the Community Link and within the App/Driver code.",
 	"apps" : [
 		{
 			"id" : "b63130f0-bd38-4c2c-99de-5cffff85a253",
