--- a/Apps/Send IP2IR/packageManifest.json
+++ b/Apps/Send IP2IR/packageManifest.json
@@ -5,6 +5,7 @@
 	"dateReleased": "2020-04-07",
 	"documentationLink": "https://github.com/bptworld/Hubitat",
 	"communityLink": "https://community.hubitat.com/t/release-send-ip2ir-control-all-of-your-ir-devices-from-your-dashboard/4667",
+	"releaseNotes": "All release notes can be found within the Community Link and within the App/Driver code.",
 	"apps" : [
 		{
 			"id" : "a230faf3-34dd-40f9-b72b-b9d7bb2bdf8d",
