--- a/Apps/Remote Wellness Check/packageManifest.json
+++ b/Apps/Remote Wellness Check/packageManifest.json
@@ -5,6 +5,7 @@
 	"dateReleased": "2020-04-07",
 	"documentationLink": "https://github.com/bptworld/Hubitat",
 	"communityLink": "https://github.com/bptworld/Hubitat/blob/master",
+	"releaseNotes": "All release notes can be found within the Community Link and within the App/Driver code.",
 	"apps" : [
 		{
 			"id" : "066f5317-ca1d-46c0-b1bb-7199395c2935",
