--- a/Apps/Package Explorer/packageManifest.json
+++ b/Apps/Package Explorer/packageManifest.json
@@ -5,6 +5,7 @@
 	"dateReleased": "2020-04-07",
 	"documentationLink": "https://github.com/bptworld/Hubitat",
 	"communityLink": "https://community.hubitat.com/t/release-package-explorer-for-use-with-hubitat-package-manager/39214",
+	"releaseNotes": "All release notes can be found within the Community Link and within the App/Driver code.",
 	"apps" : [
 		{
 			"id" : "744790a2-7055-4967-9fd9-8d51257a40c9",
