--- a/Apps/One at a Time/packageManifest.json
+++ b/Apps/One at a Time/packageManifest.json
@@ -5,6 +5,7 @@
 	"dateReleased": "2020-04-07",
 	"documentationLink": "https://github.com/bptworld/Hubitat",
 	"communityLink": "https://community.hubitat.com/t/release-one-at-a-time/7063",
+	"releaseNotes": "All release notes can be found within the Community Link and within the App/Driver code.",
 	"apps" : [
 		{
 			"id" : "814a307e-f6c6-4e8e-8810-3f65675a318e",
