--- a/Apps/Magic Cube/packageManifest.json
+++ b/Apps/Magic Cube/packageManifest.json
@@ -5,6 +5,7 @@
 	"dateReleased": "2020-04-07",
 	"documentationLink": "https://github.com/bptworld/Hubitat",
 	"communityLink": "https://community.hubitat.com/t/release-magic-cube/11987",
+	"releaseNotes": "All release notes can be found within the Community Link and within the App/Driver code.",
 	"apps" : [
 		{
 			"id" : "3fe7903d-280e-46f4-8720-2f621c59093e",
