--- a/Apps/Lighting Effects/packageManifest.json
+++ b/Apps/Lighting Effects/packageManifest.json
@@ -5,6 +5,7 @@
 	"dateReleased": "2020-04-07",
 	"documentationLink": "https://github.com/bptworld/Hubitat",
 	"communityLink": "https://community.hubitat.com/t/release-lighting-effects/4330",
+	"releaseNotes": "All release notes can be found within the Community Link and within the App/Driver code.",
 	"apps" : [
 		{
 			"id" : "e53bf0af-1171-4d8a-b1f7-c4cebea99f80",
