--- a/Apps/Fully Kiosk Director/packageManifest.json
+++ b/Apps/Fully Kiosk Director/packageManifest.json
@@ -5,6 +5,7 @@
 	"dateReleased": "2020-04-07",
 	"documentationLink": "https://github.com/bptworld/Hubitat",
 	"communityLink": "https://community.hubitat.com/t/release-fully-kiosk-director/15310",
+	"releaseNotes": "All release notes can be found within the Community Link and within the App/Driver code.",
 	"apps" : [
 		{
 			"id" : "af3b13d2-dcb9-4049-a941-4320a606911e",
