--- a/Apps/Device Watchdog/packageManifest.json
+++ b/Apps/Device Watchdog/packageManifest.json
@@ -5,6 +5,7 @@
 	"dateReleased": "2020-04-07",
 	"documentationLink": "https://github.com/bptworld/Hubitat",
 	"communityLink": "https://community.hubitat.com/t/release-device-watchdog/7692",
+	"releaseNotes": "All release notes can be found within the Community Link and within the App/Driver code.",
 	"apps" : [
 		{
 			"id" : "0f61e609-7ace-4654-8acd-d62449c0b8b8",
