--- a/Apps/BI Control/packageManifest.json
+++ b/Apps/BI Control/packageManifest.json
@@ -5,6 +5,7 @@
 	"dateReleased": "2020-04-07",
 	"documentationLink": "https://github.com/bptworld/Hubitat",
 	"communityLink": "https://community.hubitat.com/t/release-bi-control-local-blue-iris-control/5454",
+	"releaseNotes": "All release notes can be found within the Community Link and within the App/Driver code.",
 	"apps" : [
 		{
 			"id" : "4a0a86a3-c305-4066-b568-162cfe545a12",
