--- a/Apps/At Home Simulator/packageManifest.json
+++ b/Apps/At Home Simulator/packageManifest.json
@@ -5,6 +5,7 @@
 	"dateReleased": "2020-04-07",
 	"documentationLink": "https://github.com/bptworld/Hubitat",
 	"communityLink": "https://community.hubitat.com/t/release-at-home-simulator/8697",
+	"releaseNotes": "All release notes can be found within the Community Link and within the App/Driver code.",
 	"apps" : [
 		{
 			"id" : "d21333a8-fffc-45d2-91f0-1fa7af0d7ba9",
