--- a/Apps/The Flasher/packageManifest.json
+++ b/Apps/The Flasher/packageManifest.json
@@ -27,5 +27,13 @@
 		}
 	],
 	"drivers" : [	
+		{
+			"id": "0e009f99-0005-440d-a642-c3273301c1ee",
+			"name": "The Flasher Driver",
+			"namespace": "BPTWorld",
+			"location": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/The%20Flasher/TF-child.groovy",
+			"required": true,
+			"version": "1.0.0"
+		}
 	]
 }
