--- a/Apps/Event Watchdog/packageManifest.json
+++ b/Apps/Event Watchdog/packageManifest.json
@@ -4,7 +4,7 @@
 	"author": "BPTWorld",
 	"dateReleased": "2020-06-28",
 	"documentationLink": "https://github.com/bptworld/Hubitat",
-	"communityLink": "",
+	"communityLink": "https://community.hubitat.com/t/release-event-watchdog-keep-an-eye-on-whats-important-in-the-event-log/44284",
 	"releaseNotes": "All release notes can be found within the Community Link and within the App/Driver code.",
 	"apps" : [
 		{
