--- a/Apps/Log Watchdog/packageManifest.json
+++ b/Apps/Log Watchdog/packageManifest.json
@@ -23,7 +23,7 @@
 			"location": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Log%20Watchdog/LW-child.groovy",
 			"required": true,
 			"oauth": false,
-			"version": "2.1.4
+			"version": "2.1.4"
 		}
 	],
 	"drivers" : [
