--- a/Apps/CATT Director/packageManifest.json
+++ b/Apps/CATT Director/packageManifest.json
@@ -14,7 +14,8 @@
 			"location": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/CATT%20Director/CATTD-parent.groovy",
 			"required": true,
 			"oauth": false,
-			"version": "2.0.1"
+			"version": "2.0.1",
+			"primary": true
 		},
 		{
 			"id" : "62820520-e7ac-453d-9d37-39366e313814",
