--- a/Apps/Chromecast Helper/packageManifest.json
+++ b/Apps/Chromecast Helper/packageManifest.json
@@ -14,7 +14,8 @@
 			"location": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Chromecast%20Helper/CH.groovy",
 			"required": true,
 			"oauth": false,
-			"version": "2.0.2"
+			"version": "2.0.2",
+			"primary": true
 		}
 	],
 	"drivers" : [	
