--- a/Apps/Follow Me/packageManifest.json
+++ b/Apps/Follow Me/packageManifest.json
@@ -14,7 +14,8 @@
 			"location": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Follow%20Me/FM-parent.groovy",
 			"required": true,
 			"oauth": false,
-			"version": "2.0.2"
+			"version": "2.0.2",
+			"primary": true
 		},
 		{
 			"id" : "7fc24c2f-0ccb-4b9c-9666-9660862ddcf5",
