--- a/Apps/Fully Kiosk Director/packageManifest.json
+++ b/Apps/Fully Kiosk Director/packageManifest.json
@@ -14,7 +14,8 @@
 			"location": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Fully%20Kiosk%20Director/FKC-parent.groovy",
 			"required": true,
 			"oauth": false,
-			"version": "2.0.1"
+			"version": "2.0.1",
+			"primary": true
 		},
 		{
 			"id" : "5c2eb4cf-1728-4c60-b7c1-aebd6458fdee",
