--- a/Apps/Life360 Tracker/packageManifest.json
+++ b/Apps/Life360 Tracker/packageManifest.json
@@ -14,7 +14,8 @@
 			"location": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Life360%20Tracker/LT-parent.groovy",
 			"required": true,
 			"oauth": false,
-			"version": "2.0.1"
+			"version": "2.0.1",
+			"primary": true
 		},
 		{
 			"id" : "9379e41f-6bd6-4e4c-9688-4a2e3433ae1b",
