--- a/Apps/Lighting Effects/packageManifest.json
+++ b/Apps/Lighting Effects/packageManifest.json
@@ -14,7 +14,8 @@
 			"location": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Lighting%20Effects/LE%20Parent.groovy",
 			"required": true,
 			"oauth": false,
-			"version": "2.0.2"
+			"version": "2.0.2",
+			"primary": true
 		},
 		{
 			"id" : "433a1244-ca80-4da6-bdf0-7d77f4c4dc25",
